use space instead of + by default

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
       <tr><td class="var-h"> 1024</td><td><input class="var var-v1024" type="text" name="v1024" value="1024"       /></td>
           <td class="var-h"> 2048</td><td><input class="var var-v2048" type="text" name="v2048" value="2048"       /></td></tr>
       <tr><td class="var-h"> More</td><td><input class="var var-m"     type="text" name="m"     value="4096"       /></td>
-          <td class="var-h">  Win</td><td><input class="var var-w"     type="text" name="w"     value="You_win!"   /></td></tr>
-      <tr><td class="var-h"> Over</td><td><input class="var var-o"     type="text" name="o"     value="Game_over!" /></td>
+          <td class="var-h">  Win</td><td><input class="var var-w"     type="text" name="w"     value="You win!"   /></td></tr>
+      <tr><td class="var-h"> Over</td><td><input class="var var-o"     type="text" name="o"     value="Game over!" /></td>
           <td class="var-h">     </td><td><input class="var-go"        type="submit"            value="Go!"        /></td></tr>
     </table></form></center>
     <hr>
